--- a/templates/index.html
+++ b/templates/index.html
@@ -17,18 +17,19 @@
     </style>
 </head>
 <body>
+<h1><b>平泉LOVEレボリューション</b></h1>
     <form action="/index" method="POST">
         <div class="image-container">
             <label for="futa">
                 <img src="static/images/futa.jpg">
             </label>
-            <input type="radio" id="futa" name="chosen_image" value="futa">
+            <input type="radio" id="futa" name="chosen_image" value="chosen_image">
         </div>
         <div class="image-container">
             <label for="sho">
                 <img src="static/images/sho.jpg">
             </label>
-            <input type="radio" id="sho" name="chosen_image" value="sho">
+            <input type="radio" id="sho" name="chosen_image" value="sho.jpg">
         </div>
         <button type="submit">Submit</button>
     </form>
