--- a/templates/index_2.html
+++ b/templates/index_2.html
@@ -28,8 +28,8 @@
                 <input type="radio" id="scenery" name="chosen_preference" value={{choice_2}}>
                 {{choice_2}}
             </label>
-            <input type="hidden" id="photo" name="photo" value={{photo}}>
-        <button type="submit">Submit</button>
+            <input type="hidden" id="photo" name="chosen_image" value={{photo}}>
+            <button type="submit">Submit</button>
         </div>
     </form>
     </div>
