--- a/templates/index_3.html
+++ b/templates/index_3.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
     <title>Choose your preference</title>
     <style>
         .choice-container {
@@ -12,31 +14,17 @@
         }
     </style>
 </head>
+
 <body>
     <div class="image-container">
-    <img src="static/images/{{ photo }}">
-    <form action="/index_3" method="POST">
-        <div class="choice-container"> 
-            <label for="meal">
-                <input type="radio" id="meal" name="chosen_preference" value={{choice_1}}>
-                {{choice_1}}
-            </label>
-            <label for="photo">
-                <input type="radio" id="photo" name="chosen_preference" value={{choice_2}}>
-                {{choice_2}}
-            </label>
-            <input type="hidden" id="photo" name="photo" value={{photo1}}>
-            <input type="hidden" id="photo" name="photo" value={{photo2}}>
-        <button type="submit">Submit</button>
-        </div>
+        <img src="static/images/{{ photo1 }}" height="300">
+        <img src="static/images/{{ photo2 }}" height="300">
+    </div>
     
-    <!-- <div class="choice-container"> -->
-    <!-- <img src="static/images/{{ photo1 }}">
-    <img src="static/images/{{ photo2 }}">
-    <form action="/index_3" method="POST">
-
+    <form action="/index_4" method="POST">
+        <input type="hidden" id="photo" name="chosen_image" value={{photo}}>
         <button type="submit">Submit</button>
-    <!-- </div> -->
-    <!-- </form> --> -->
+    </form>
 </body>
+
 </html>
