--- a/templates/index_7.html
+++ b/templates/index_7.html
@@ -17,9 +17,11 @@
 <body>
     <div class="image-container">
         <img src="static/images/{{ photo }}">
+        <img src="static/images/{{ photo }}">
+        <img src="static/images/{{ photo }}">
+
     </div>
-    
-    <form action="/index_6" method="POST">
+    <form action="/index_7" method="POST">
         <input type="hidden" id="photo" name="chosen_image" value={{photo}}>
         <button type="submit">Submit</button>
     </form>
